# OpenGL_Init_MultyThread

./: README.md
MultiThread/: GL_drawMesh.pro  glarea.cpp  glarea.h  main.cpp  mainwindow.cpp  mainwindow.h  testOpenGL.cpp  testOpenGL.h
SingleThread/: CMakeLists.txt  MeshWithCorners.cpp  MeshWithCorners.h  MyOpenGL.cpp  MyOpenGL.h  ShowMeshForMultiThread.cpp  ShowMeshForMultiThread.h  header.h  main.cpp
